# api

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: publish.yml
examples/: sync_to_es.rs  sync_to_manticore.rs  sync_to_typesense.rs
migrations/: 20251219172530_create_telemetry_table.sql  20260218164620_timescaledb_optimization.sql
src/: db.rs  elasticsearch.rs  main.rs  manticore.rs  rate_limit.rs  search.rs  typesense.rs
src/api/: mod.rs  telemetry.rs  validation.rs
src/api/metadata/: mod.rs
src/api/metadata/v1/: metadata.rs  mod.rs  resource.rs
src/api/telemetry/: mod.rs
src/api/telemetry/v1/: mod.rs  telemetry.rs
src/api/update/v1/: mod.rs  update.rs
src/api/v1/: mod.rs  search.rs  telemetry.rs
src/db/: metadata.rs  mod.rs  telemetry.rs
src/models/: metadata.rs  mod.rs  telemetry.rs
