[package]
name = "vleer_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "time",
  "migrate",
] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
time = { version = "0.3.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.2"
tower = "0.5.2"
tower_governor = "0.8.0"
governor = "0.10.4"
