[package]
name = "vleer_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "migrate",
] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
time = { version = "0.3.47", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.3"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tower_governor = "0.8.0"
governor = "0.10.4"
anyhow = "1.0.102"
chrono = "0.4.44"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "form"] }
indicatif = "0.18.4"
